# subtitle

./: .gitignore  README.md  [初翻](08-14)淡岛百景01V1.ass  [初翻](15-24)厄里斯的圣杯05v1.ass  [时轴(17-end)淡岛百景04.ass  [时轴](15-24)厄里斯的圣杯04v1.ass  [时轴](15-24)厄里斯的圣杯05v1.ass  [时轴](15-24)厄里斯的圣杯06V1.ass  [时轴](17-end)淡岛百景02.ass  [时轴](17-end)淡岛百景04.ass  [终稿]厄里斯的圣杯03v1.ass  [终稿]厄里斯的圣杯04v2.ass  [终稿]厄里斯的圣杯05v2.ass  [终稿]厄里斯的圣杯06V2.ass  [终稿]淡岛百景03_v3.ass  bcc2ass.py  flake.nix  pyproject.toml  shell.nix  whisper.py  【04-06@校对@时间轴@描绘直至生命尽头】TVアニメ『これ描いて死ね』ティザーPV【2026年 日本テレビ系にて放送！】画完去死PV-A.ass  【4-3@时间轴V1】 TVアニメ『天幕のジャードゥーガル』第1弾PV｜2026年7月放送.ass  【4-3@时间轴V1】TV『攻殻機動隊 THE GHOST IN THE SHELL』第1弾｜2026年7月放送.ass  【4-3@翻译稿V1时间轴V1】TVアニメ『とある科学の超電磁砲』特報映像！.ass  【4.08@听译@时间轴】TVアニメ『「きみを愛する気はない」と言った次期公爵様がなぜか溺愛してきます』ティザーPV.ass
Bevy/: sub wh.ass  sub.ass
SP/: 色表.md
tsdm/: TVアニメ「メイドさんは食べるだけ」ティザーPV.ass  【1-2@翻译稿V1@校对稿V2@药屋少女的呢喃两周年纪念PV】TVアニメ『薬屋のひとりごと』2周年記念PV - TVアニメ第3期＆劇場版制作決定！.ass  【1-4@翻译稿V1@时间轴V1@校对稿V2魔女之旅剧场版PV1】【魔女の旅々】新作劇場版アニメーション特報.ass  【1-4@翻译稿V1@校对稿V2@时间轴V1魔女之旅剧场版PV1】【魔女の旅々】新作劇場版アニメーション特報.ass  【1-5@翻译稿V1@时间轴V1@逃跑殿下PV】TVアニメ『逃げ上手の若君』第二期、開幕 ｜2026年7月放送開始.ass  【1-5@翻译稿V1@校对稿V2@时间轴V1@药屋少女的呢喃两周年纪念PV】TVアニメ『薬屋のひとりごと』2周年記念PV - TVアニメ第3期＆劇場版制作決定！.ass  【11-17@翻译稿V1时间轴V1】TVアニメ「メイドさんは食べるだけ」ティザーPV.ass  【11-24@翻译稿V1校对稿V1@迦楠大人PV-A】TVアニメ「カナン様はあくまでチョロい」第1弾PV _ 2026年4月放送開始.ass  【12-16@翻译稿V1@时间轴V1@异国日记】TVアニメ『違国日記』PV第2弾.ass  【12-1@翻译稿V1校对稿V1@时间轴V1@迦楠大人PV-A】TVアニメ「カナン様はあくまでチョロい」第1弾PV _ 2026年4月放送開始.ass  【12-4@翻译稿V1@时间轴V1@尖帽子PV-A】【ティザーPV】26年4月放送！TVアニメ「とんがり帽子のアトリエ」.ass  【12-4@翻译稿V1@时间轴V1@猫与龙PV-A】TVアニメ『猫と竜』ティザーPV【2026年7月放送開始！】.ass  (+1 more)
(+192 files in other folders)
